--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="main.css" />
+  </head>
   <body>
-    <h1>placeholder</h1>
+    <div class="container">
+      <div class="top-menu">top menu</div>
+      <div>wallet header</div>
+      <div class="buttons">buttons</div>
+      <div class="content">
+        <div class="assets">assets</div>
+        <div class="history">history</div>
+      </div>
+    </div>
   </body>
 </html>
